nector_home/static/main.css
body {
    background-color: black;
    color: #FDFDFD;
    font: 12px "Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace;
}

h2 {

}

a:link {
    color: green;
    text-decoration: none;
}

a:visited {
    color: green;
    text-decoration: none;
}

a:hover {
    color: yellow;
    text-decoration: underline;
}

.logo-link:hover {
    color: yellow;
    text-decoration: none;
}

.nav {
    font-size: 16px;
    color: #666;
    text-align: center;
}

.wire {
    text-align: center;
    font: 10px "Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace;
    color: #CCC;
}

.nav_link {
    padding: 8px;
    text-align: center;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #040404;
    min-width: 110px;
    padding: 8px;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.content {
    text-align: justify;
    padding: 12px 12px 40px 12px;
    margin-left: 40px;
    margin-right: 40px;
    margin-bottom: 40px;
    border: 1px solid green;
    color: #FDFDFD;
    overflow: hidden;
}

.title-logo {
    float:left;
}


.rss-feed-removal{
    width:393px;
}

.ip-textbox {
    float: right;
    padding: 2px;
}

.header {
    padding: 4px;
    background-color: black;
    color: green;
}

.huge-text {
    font-size: 24px;
}

.large-text {
    font-size: 20px;
}

.medium-text {
    font-size: 16px;
}

.normal-text {
    font-size: 12px;
}

.small-text {
    font-size: 10px;
}

.base_search {
    color: white;
    margin-right: 10px;
}

.base_login {
    float: right;
}

.header-table {
    width: 98%;
    background-color: black;
    color: green;
}

.header-table td {
    padding: 2%;
    background-color: black;
    color: green;
}

.desc-title {
    font-weight: bold;
    font-size: 24px;
}

table {
    border: 1px solid white;
    background-color: black;
}

.td-content {
    border: 1px solid white;
    padding: 6px;
    text-align: center;
}

.td-content-edit-hosts {
    border: 1px solid white;
    padding:8px;
    text-align: right;
}

.td-content-edit-hosts-status {
    border: 1px solid white;
    padding:8px;
    text-align: left;
}

.td-content-scans {
    border: 1px solid white;
    padding:8px;
    text-align: right;
}

.td-content-scans-btn-generate {
    padding:10px;
    text-align: left;
}

.td-content-scans-btn-export {
    padding:10px;
    text-align: right;
}

.td-content-register {
    border: 1px solid white;
    padding: 8px;
    text-align: center;
}

.td-content-login {
    border: 1px solid white;
    padding: 12px;
    text-align: center;
}

.error-text {
    color : lightcoral;
}

.col-left {
    float: left;
    width: 35.33333333%;
}

.col-mid {
    float: left;
    width: 40.33333333%;
}

.col-right {
    float: left;
    width: 24.33333333%;
}

.p-left {
    text-align: left;
    padding: 4px;
}

.footer {
    padding-top: 20px;
    text-align: center;
    font-size: 8px;
    color: #666;
}

